--- a/application/views/scripts/document/page/show.phtml
+++ b/application/views/scripts/document/page/show.phtml
@@ -26,7 +26,7 @@ Content: <br />
   <?php $lines = explode('<br />', $this->page->getContent()); ?>
   <ol>
     <?php foreach($lines as $line): ?>
-      <li><?php echo $line; ?></li>
+      <li><?php echo htmlentities($line); ?></li>
     <?php endforeach; ?>
   </ol>
 </div>
